@@ -1,3 +1,11 @@
 # neuroBasicAI
 
 suca
+
+
+per runnare il programma bisogna scaricare java fx 
+https://openjfx.io/
+https://www.youtube.com/watch?v=nz8P528uGjk //tutorial per importare la libreria su eclipse
+
+come parametri VM in run config mettere:
+--module-path "C:\-PATH TO JAVAFX-\JavaFX\javafx-sdk-19.0.2.1\lib" --add-modules javafx.controls,javafx.fxml
